<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/playerFragment">

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.beatohm.ui.PlayerFragment"
        android:label="@string/player_title"
        tools:layout="@layout/fragment_player" />

    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.beatohm.ui.LibraryFragment"
        android:label=""
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/downloadsFragment"
        android:name="com.beatohm.ui.DownloadsFragment"
        android:label="@string/downloads_title"
        tools:layout="@layout/fragment_downloads">
        <action
            android:id="@+id/action_downloadsFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.beatohm.ui.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_themeSelector"
            app:destination="@id/themeSelectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/themeSelectionFragment"
        android:name="com.beatohm.ui.ThemeSelectionFragment"
        android:label="@string/theme_selector_title"
        tools:layout="@layout/fragment_theme_selection" />

    <fragment
        android:id="@+id/songListFragment"
        android:name="com.beatohm.ui.SongListFragment"
        android:label="@string/songs">
        <argument
            android:name="folderPath"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="searchQuery"
            android:defaultValue=""
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/categoryListFragment"
        android:name="com.beatohm.ui.CategoryListFragment"
        android:label="@string/categories">
        <argument
            android:name="category"
            android:defaultValue="album"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.beatohm.ui.FavoritesFragment"
        android:label="@string/favorites" />

    <fragment
        android:id="@+id/playlistsFragment"
        android:name="com.beatohm.ui.PlaylistsFragment"
        android:label="@string/playlists_menu" />

    <fragment
        android:id="@+id/mostPlayedFragment"
        android:name="com.beatohm.ui.MostPlayedFragment"
        android:label="@string/most_played" />

    <fragment
        android:id="@+id/foldersFragment"
        android:name="com.beatohm.ui.FoldersFragment"
        android:label="@string/folders" />

    <fragment
        android:id="@+id/playlistDetailFragment"
        android:name="com.beatohm.ui.PlaylistDetailFragment"
        android:label="@string/playlists_menu">
        <argument
            android:name="playlist_id"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="playlist_name"
            android:defaultValue=""
            app:argType="string" />
    </fragment>
</navigation>
